--- a/Bar.htm
+++ b/Bar.htm
@@ -8,4 +8,5 @@
     <a href="#">Apps</a>
     <a href="#">Categories</a>
     <a href="https://forms.gle/f88V2FCWP9BabeKX9">Devs eara</a>
+    <a href="https://github.com/MAT-services/One-Staller/blob/main/TOS.md">TOS</a>
 </nav>
