--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -23,7 +23,7 @@
                     <button>Get</button>
                 </div>
                 <div class="app-card">
-                    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f3ae.png" alt="App Icon">
+                    <img src="/MPC/assets/BC.jpg" alt="App Icon">
                     <h2>Fun Game</h2>
                     <p>Enjoy hours of fun with this addictive puzzle game.</p>
                     <button>Get</button>
