--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -22,11 +22,8 @@
                     <p>A powerful and lightweight code editor for developers.</p>
                     <button>Get</button>
                 </div>
-                <div class="app-card">
-                    <img src="/MPC/assets/BC.jpg" alt="App Icon">
-                    <h2>Fun Game</h2>
-                    <p>Enjoy hours of fun with this addictive puzzle game.</p>
-                    <button>Get</button>
+                <div class="app-card" style="background-image: url('/MPC/assets/BC.jpg')">
+                    <button onclick="window.open('/MPC/')">GO!</button>
                 </div>
             </section>
         </main>
