--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -22,7 +22,7 @@
                     <p>A powerful and lightweight code editor for developers.</p>
                     <button>Get</button>
                 </div>
-                <div class="app-card" style="background-image: url('/MPC/assets/BC.jpg')">
+                <div class="app-card" style="background-image: url('/MPC/assets/BC.jpg'); background-position: center;">
                     <button onclick="window.open('/MPC/')">GO!</button>
                 </div>
             </section>
