--- a/carousel.htm
+++ b/carousel.htm
@@ -58,6 +58,9 @@ button.next {
   left: 5px;
   top: 5px;
 }
+.content2 {
+  background-image: url('');
+}
 </style>
 <center>
   <main class="carousel-main">
