--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -17,13 +17,12 @@
         <main>
             <section class="app-grid">
                 <div class="app-card">
-                    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4bb.png" alt="App Icon">
-                    <h2>Code Editor</h2>
-                    <p>A powerful and lightweight code editor for developers.</p>
-                    <button>Get</button>
+                    <h2>Join MPC</h2>
+                    <p>You can join our community of programmers to get many avantages like help of the community, special OneStaller avantages, direct support and more!</p>
                 </div>
                 <div class="app-card" style="background-image: url('/MPC/assets/BC.jpg'); background-position: center;">
-                    <button onclick="window.open('/MPC/')">GO!</button>
+                    <button onclick="window.open('/MPC/')" style="position: left;">GO!</button>
+                    <button onclick="" style="position: right;">JOIN!</button>
                 </div>
             </section>
         </main>
