--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -25,6 +25,15 @@
                     <button onclick="" style="position: right;">JOIN!</button>
                 </div>
             </section>
+            <selection class="app-grid">
+                <div class="app-card">
+                    <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScmSyUldq-yiHO_uixs-4dvHGghZGpMJjwwLnBBI-si8ycohA/viewform')">PUBLISH!</button>
+                </div>
+                <div class="app-card">
+                    <H2>Publish your application now!</H2>
+                    Start publishing your application on OneStaller. That totally FREE, just... Please... See the One-Staller Terms Of Use.
+                </div>
+            </selection>
         </main>
     </body>
 </html>
