--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -21,12 +21,12 @@
                     <p>You can join our community of programmers to get many avantages like help of the community, special OneStaller avantages, direct support and more!</p>
                 </div>
                 <div class="app-card" style="background-image: url('/MPC/assets/BC.jpg'); background-position: center;">
-                    <button onclick="window.open('/MPC/')" style="position: left;">GO!</button>
+                    <button onclick="window.open('/MPC/')" style="position: left; cursor: pointer;">GO!</button>
                 </div>
             </section>
             <selection class="app-grid">
                 <div class="app-card">
-                    <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScmSyUldq-yiHO_uixs-4dvHGghZGpMJjwwLnBBI-si8ycohA/viewform')">PUBLISH!</button>
+                    <button style="cursor: pointer;" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScmSyUldq-yiHO_uixs-4dvHGghZGpMJjwwLnBBI-si8ycohA/viewform')">PUBLISH!</button>
                 </div>
                 <div class="app-card">
                     <H2>Publish your application now!</H2>
