--- a/Bar.htm
+++ b/Bar.htm
@@ -7,6 +7,6 @@
     <a href="#">Home</a>
     <a href="#">Apps</a>
     <a href="#">Categories</a>
-    <a href="https://forms.gle/f88V2FCWP9BabeKX9">Devs eara</a>
+    <a href="/One-Staller/Dev-Eara/">Devs eara</a>
     <a href="https://github.com/MAT-services/One-Staller/blob/main/TOS.md">TOS</a>
 </nav>
