--- a/Bar.htm
+++ b/Bar.htm
@@ -4,7 +4,7 @@
     <button type="submit">Search (UNAVIABLE)</button>
 </form>
 <nav>
-    <a href="#">Home</a>
+    <a href="/One-Staller/">Home</a>
     <a href="#">Apps</a>
     <a href="#">Categories</a>
     <a href="/One-Staller/Dev-Eara/">Devs eara</a>
