Updating Dev-Eara

--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="app-card">
                     <H2>Publish your application now!</H2>
-                    Start publishing your application on OneStaller. That totally FREE, just... Please... See the One-Staller Terms Of Use.
+                    <p>Start publishing your application on OneStaller. That totally FREE, just... Please... See the One-Staller Terms Of Use.</p>
                 </div>
             </selection>
         </main>
