Updating exportation bogs solutions

--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header id="Bar"></header>
-        <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
+        <script>includeHTML("Bar", "/One-Staller/Bar.htm");</script>
         <main>
             <section class="app-grid">
                 <div class="app-card">
