Updating exportation bogs solutions

--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -7,8 +7,8 @@
         <style>
 
         </style>
-        <link rel="stylesheet" href="/OneStaller/styles.css">
-        <link rel="icon" type="image/x-icon" href="/OneStaller/assets/logo.png"></link>
+        <link rel="stylesheet" href="/One-Staller/styles.css">
+        <link rel="icon" type="image/x-icon" href="/One-Staller/assets/logo.png"></link>
         <script src="/HttpReq.js"></script>
     </head>
     <body>
