--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -25,7 +25,7 @@
                 </div>
             </section>
             <selection class="app-grid">
-                <div class="app-card">
+                <div class="app-card" style="background-image: url(/One-Staller/assets/BCE1.jpg);">
                     <button style="cursor: pointer;" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScmSyUldq-yiHO_uixs-4dvHGghZGpMJjwwLnBBI-si8ycohA/viewform')">PUBLISH!</button>
                 </div>
                 <div class="app-card">
