Pushing styles to styles.css

--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -20,12 +20,12 @@
                     <h2>Join MPC</h2>
                     <p>You can join our community of programmers to get many avantages like help of the community, special OneStaller avantages, direct support and more!</p>
                 </div>
-                <div class="app-card" style="background-image: url('/MPC/assets/BC.jpg'); background-position: center;">
+                <div class="app-card" style="background-image: url('/MPC/assets/BC.jpg');">
                     <button onclick="window.open('/MPC/')" style="position: left; cursor: pointer;">GO!</button>
                 </div>
             </section>
             <selection class="app-grid">
-                <div class="app-card" style="background-image: url(/One-Staller/assets/BCE1.jpg); background-size: cover; background-position: center;">
+                <div class="app-card" style="background-image: url(/One-Staller/assets/BCE1.jpg);">
                     <button style="cursor: pointer;" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScmSyUldq-yiHO_uixs-4dvHGghZGpMJjwwLnBBI-si8ycohA/viewform')">PUBLISH!</button>
                 </div>
                 <div class="app-card">
