--- a/carousel.htm
+++ b/carousel.htm
@@ -56,10 +56,10 @@ button.next {
   right: 10px;
 }
 .content1 {
-  background-image: url('/M.png'); 
+  background-image: url(''); 
 }
 .content2 {
-  background-image: url('');
+  background-image: url('/M.png');
 }
 </style>
 <center>
@@ -67,12 +67,12 @@ button.next {
     <div class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active content1">
-          <H1>One Staller ALPHA Update</H1>
-                  <marquee>This website is in construction.</marquee>
+          <H1>Publish on One-Staller is FREE!!</H1>
+          <button onclick="window.location.href = '/One-Staller/Dev-Eara'">Get started!</button>
         </div>
-        <div class="carousel-item">
-          <!--<img src="https://picsum.photos/id/237/300" alt="Image 2" />-->
-          img2
+        <div class="carousel-item content2">
+          <H1>One Staller ALPHA Update</H1>
+          <marquee>This website is in construction.</marquee>
         </div>
         <div class="carousel-item">
           <!--<img src="https://picsum.photos/id/259/300" alt="Image 3" />-->
