--- a/carousel.htm
+++ b/carousel.htm
@@ -56,7 +56,7 @@ button.next {
   right: 10px;
 }
 .content1 {
-  background-image: url(''); 
+  background-image: url('/One-Staller/assets/BCE1.jpg'); 
 }
 .content2 {
   background-image: url('/M.png');
