Updating apps and Bar

--- a/Bar.htm
+++ b/Bar.htm
@@ -5,7 +5,7 @@
 </form>
 <nav>
     <a href="/One-Staller/">Home</a>
-    <a href="#">Apps</a>
+    <a href="/One-Staller/apps/">Apps</a>
     <a href="#">Categories</a>
     <a href="/One-Staller/Dev-Eara/">Devs eara</a>
     <a href="https://github.com/MAT-services/One-Staller/blob/main/TOS.md">TOS</a>
