--- a/apps/content.htm
+++ b/apps/content.htm
@@ -1,4 +1,4 @@
-                <div class="app-card"></div>
-                <div class="app-card"></div>
-                <div class="app-card"></div>
-                <div class="app-card"></div>
+                <div class="app-card">test1</div>
+                <div class="app-card">test2</div>
+                <div class="app-card">test3</div>
+                <div class="app-card">test4</div>
