--- a/apps/index.html
+++ b/apps/index.html
@@ -15,8 +15,8 @@
         <header id="Bar"></header>
         <script>includeHTML("Bar", "/One-Staller/Bar.htm");</script>
         <main>
-            <section class="app-grid" id="app-grid"></section>
-            <script>includeHTML("app-gird", "/One-Staller/apps/content.htm");</script>
+            <section class="app-grid" id="AppGrd"></section>
+            <script>includeHTML("AppGrd", "/One-Staller/apps/content.htm");</script>
         </main>
     </body>
 </html>
