Automating apps grid

--- a/apps/index.html
+++ b/apps/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>OneStaller - Devs Eara</title>
+        <title>OneStaller - Applications List</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
 
