--- a/index.html
+++ b/index.html
@@ -48,32 +48,8 @@
                     </script>
                 </div>
             </div><br>
-            <section class="app-grid">
-                <div class="app-card">
-                    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4bb.png" alt="App Icon">
-                    <h2>Code Editor</h2>
-                    <p>A powerful and lightweight code editor for developers.</p>
-                    <button>Get</button>
-                </div>
-                <div class="app-card">
-                    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f3ae.png" alt="App Icon">
-                    <h2>Fun Game</h2>
-                    <p>Enjoy hours of fun with this addictive puzzle game.</p>
-                    <button>Get</button>
-                </div>
-                <div class="app-card">
-                    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4f1.png" alt="App Icon">
-                    <h2>Photo Editor</h2>
-                    <p>Edit your photos with advanced filters and tools.</p>
-                    <button>Get</button>
-                </div>
-                <div class="app-card">
-                    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4c8.png" alt="App Icon">
-                    <h2>Finance Tracker</h2>
-                    <p>Track your expenses and manage your budget easily.</p>
-                    <button>Get</button>
-                </div>
-            </section>
+            <section class="app-grid" id="AppGrd"></section>
+            <script>includeHTML("AppGrd", "/One-Staller/apps/content.htm");</script>
         </main>
     </body>
 </html>
