--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script>includeHTML("Bar", "Bar.htm");</script>
         <main>
             <div class="container">
-                <div  style="height:calc(100vh - 60px - 120px);"><!--class="app-card"-->
+                <div style="height:calc(100vh - 60px - 120px);">
                     <div id="carousel"></div>
                     <script>
                         includeHTML("carousel", "carousel.htm", initCarousel);
@@ -48,6 +48,7 @@
                     </script>
                 </div>
             </div><br>
+            <H1>Top Apps</H1>
             <section class="app-grid" id="AppGrd"></section>
             <script>includeHTML("AppGrd", "/One-Staller/apps/content.htm");</script>
         </main>
