--- a/carousel.htm
+++ b/carousel.htm
@@ -16,7 +16,7 @@
 .carousel-inner {
   display: flex;
   transition: transform 0.5s ease-in-out;
-  width: 100%;
+  /*width: 100%;*/
 }
 
 .carousel-item {
@@ -25,20 +25,20 @@
   height: calc(100vh - 70px); 
   background-size: cover; 
   background-position: center;
-  right: 5px;
+  /*right: 5px;
   left: 5px;
-  top: 5px;
+  top: 5px;*/
   border-radius: 10px;
   text-align: left;
   background-color: black;
   color:white;
 }
 
-.carousel img {
+/*.carousel img {
   width: 100%;
   object-fit: cover;
   display: block;
-}
+}*/
 
 button.prev,
 button.next {
