Updating Devs Eara

--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -33,6 +33,15 @@
                     <p>Start publishing your application on OneStaller. That totally FREE, just... Please... See the One-Staller Terms Of Use.</p>
                 </div>
             </selection>
+            <section class="app-grid">
+                <div class="app-card">
+                    <H2>Devlopper tools</H2>
+                    <p>In Dev... Like you?</p>
+                </div>
+                <div class="app-card" style="background-image: url('/assets/BCE1.jpg');">
+                    <button style="cursor: pointer;" onclick="window.open('')">In Dev...</button>
+                </div>
+            </section>
         </main>
     </body>
 </html>
