--- a/carousel.htm
+++ b/carousel.htm
@@ -73,7 +73,7 @@ button.next {
         <div class="carousel-item active content1">
           <H1>Publish on One-Staller is FREE!!</H1>
           <button onclick="window.location.href = '/One-Staller/Dev-Eara'">Get started!</button>
-          Note to alpha testers: This website is always in developpement, so you may encounter bugs or incomplete features. Please report any issues you find to the development team. Also, DO NOT TRY TO PUBLISH ANY APPLICATIONS! (The website can be turned down.)
+          Note to alpha testers: This website is always in developpement, so you may encounter bugs or incomplete features. Please report any issues you find to the development team. Also, DO NOT TRY TO PUBLISH ANY APPLICATIONS! (The website can be turned down.) To see a potential update, clean your cache and reload the page. Thank you for your understanding!
         </div>
         <div class="carousel-item content2">
           <H1>One Staller ALPHA Update</H1>
