--- a/carousel.htm
+++ b/carousel.htm
@@ -7,7 +7,7 @@
 
 .carousel {
   position: relative;
-  width: 100%;
+  width: calc(100% - 60px);
   /*max-width: 600px;*/
   overflow: hidden;
   max-height: 100%;
