--- a/carousel.htm
+++ b/carousel.htm
@@ -22,7 +22,7 @@
 .carousel-item {
   min-width: 100%;
   width: calc(100% - 10px); 
-  height: max-content/*calc(100vh - 70px)*/; 
+  height: calc(100vh - 70px); 
   background-size: cover; 
   background-position: center;
   border-radius: 10px;
