--- a/carousel.htm
+++ b/carousel.htm
@@ -19,7 +19,7 @@
 }
 
 .carousel-item {
-  /*min-width: 100%;*/
+  min-width: 100%;
   width: calc(100% - 10px); 
   height: calc(100vh - 80px); 
   background-size: cover; 
