--- a/carousel.htm
+++ b/carousel.htm
@@ -20,8 +20,8 @@
 }
 
 .carousel-item {
-  /*min-width: 100%;*/
-  width: calc(100% - 60px); 
+  min-width: 100%;
+  width: calc(100% - 10px); 
   height: calc(100vh - 70px); 
   background-size: cover; 
   background-position: center;
