--- a/carousel.htm
+++ b/carousel.htm
@@ -10,7 +10,7 @@
   width: 100%;
   /*max-width: 600px;*/
   overflow: hidden;
-  max-height: 100%;
+  max-height: calc(100vh - 60px);
 }
 
 .carousel-inner {
