--- a/carousel.htm
+++ b/carousel.htm
@@ -1,6 +1,5 @@
 <style>
 .carousel-main {
-  /*width: 100%;*/
   display: flex;
   justify-content: center;
 }
@@ -20,7 +19,7 @@
 }
 
 .carousel-item {
-  min-width: 100%;
+  /*min-width: 100%;*/
   width: calc(100% - 10px); 
   height: calc(100vh - 80px); 
   background-size: cover; 
@@ -30,12 +29,6 @@
   background-color: black;
   color:white;
 }
-
-/*.carousel img {
-  width: 100%;
-  object-fit: cover;
-  display: block;
-}*/
 
 button.prev,
 button.next {
