--- a/Bar.htm
+++ b/Bar.htm
@@ -1,4 +1,4 @@
-<h1><img src="/OneStaller/assets/logo.png" >OneStaller</h1>
+<h1 class="bartxt"><img src="/OneStaller/assets/logo.png" >OneStaller</h1>
 <form class="search-bar">
     <input type="text" placeholder="Search apps, games, or categories..." />
     <button type="submit">Search (UNAVIABLE)</button>
