--- a/index.html
+++ b/index.html
@@ -45,6 +45,46 @@
                                 carouselInner.style.transform = `translateX(${offset}%)`;
                             }
                         }
+                        // filepath: /workspaces/One-Staller/carousel.htm
+const carouselInner = document.querySelector('.carousel-inner');
+const items = document.querySelectorAll('.carousel-item');
+let currentIndex = 0;
+const totalItems = items.length;
+
+function showSlide(index) {
+  carouselInner.style.transform = `translateX(-${index * 100}%)`;
+  items.forEach((item, i) => {
+    item.classList.toggle('active', i === index);
+  });
+}
+
+function nextSlide() {
+  currentIndex = (currentIndex + 1) % totalItems;
+  showSlide(currentIndex);
+}
+
+function prevSlide() {
+  currentIndex = (currentIndex - 1 + totalItems) % totalItems;
+  showSlide(currentIndex);
+}
+
+// Auto défilement toutes les 4 secondes
+let autoSlide = setInterval(nextSlide, 4000);
+
+// Boutons manuel
+document.querySelector('.next').onclick = () => {
+  nextSlide();
+  resetAutoSlide();
+};
+document.querySelector('.prev').onclick = () => {
+  prevSlide();
+  resetAutoSlide();
+};
+
+function resetAutoSlide() {
+  clearInterval(autoSlide);
+  autoSlide = setInterval(nextSlide, 4000);
+}
                     </script>
                 </div>
             </div><br>
