--- a/carousel.htm
+++ b/carousel.htm
@@ -72,16 +72,17 @@ button.next {
           </div>
         </div>
         <div class="carousel-item content2">
-          <H1>One Staller ALPHA Update</H1>
-          <marquee>This website is in construction.</marquee>
+          <div class="content">
+            <H1>One Staller ALPHA Update</H1>
+            <marquee>This website is in construction.</marquee>
+          </div>
         </div>
         <div class="carousel-item">
-          <!--<img src="https://picsum.photos/id/259/300" alt="Image 3" />-->
-          img3
+          <div class="content">img3</div>
         </div>
       </div>
-      <button class="prev">‹</button>
-      <button class="next">›</button>
+      <button class="prev">‹-</button>
+      <button class="next">-›</button>
     </div>
   </main>
 </center>
