--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -13,6 +13,7 @@
             }
             .header-app {
                 background: #0078d4;
+                background-color: gradient(to right, #0078d4, #005a9e);
                 color: #fff;
                 padding: 24px 32px;
                 display: flex;
