--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -12,8 +12,7 @@
                 color: #222;
             }
             .header-app {
-                background: #0078d4;
-                background-color: gradient(to right, #0078d4, #005a9e);
+                background: conic-gradient(#0078d4, #87cbff);
                 color: #fff;
                 padding: 24px 32px;
                 display: flex;
