--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -12,7 +12,7 @@
                 color: #222;
             }
             .header-app {
-                background: conic-gradient(#0078d4, #87cbff);
+                background: conic-gradient(#0078d4, #87cbff 50%);
                 color: #fff;
                 padding: 24px 32px;
                 display: flex;
