--- a/carousel.htm
+++ b/carousel.htm
@@ -57,14 +57,14 @@ button.next {
   <main class="carousel-main">
     <div class="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active" style="background-image: url('/One-Staller/assets/BCE1.jpg');">
           <div class="content">
             <H1>Publish on One-Staller is FREE!!</H1>
             <button onclick="window.location.href = '/One-Staller/Dev-Eara'">Get started!</button>
             Note to alpha testers: This website is always in developpement, so you may encounter bugs or incomplete features. Please report any issues you find to the development team. Also, DO NOT TRY TO PUBLISH ANY APPLICATIONS! (The website can be turned down.) To see a potential update, clean your cache and reload the page. Thank you for your understanding!
           </div>
         </div>
-        <div class="carousel-item" style="background-image: url('/One-Staller/assets/BCE1.jpg');">
+        <div class="carousel-item" style="background-image: url('/MPC/assets/BC.jpg');">
           <div class="content">
             <H1>Join our programmers community!</H1>
             <button onclick="window.location.href = '/MPC/'">Let's see!</button>
