Uploading an application to test.

--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -4,117 +4,8 @@
         <meta charset="UTF-8">
         <title>One-Staller - Apps - Exemple App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            body {
-                margin: 0;
-                font-family: 'Segoe UI', Arial, sans-serif;
-                background: #f3f3f3;
-                color: #222;
-            }
-            .header-app {
-                background: linear-gradient(125deg, #0078d4,#87cbff);
-                color: #fff;
-                padding: 24px 32px;
-                display: flex;
-                align-items: center;
-            }
-            .app-icon {
-                width: 96px;
-                height: 96px;
-                border-radius: 16px;
-                background: #fff;
-                margin-right: 32px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 48px;
-                color: #0078d4;
-                box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            }
-            .app-info {
-                flex: 1;
-            }
-            .app-title {
-                font-size: 2.2rem;
-                margin: 0 0 8px 0;
-                font-weight: 600;
-            }
-            .app-publisher {
-                font-size: 1rem;
-                color: #cce6fa;
-                margin-bottom: 8px;
-            }
-            .app-rating {
-                font-size: 1rem;
-                color: #ffd700;
-                margin-bottom: 8px;
-            }
-            .install-btn {
-                background: #fff;
-                color: #0078d4;
-                border: none;
-                border-radius: 6px;
-                padding: 12px 32px;
-                font-size: 1.1rem;
-                font-weight: 600;
-                cursor: pointer;
-                margin-left: 32px;
-                transition: background 0.2s;
-            }
-            .install-btn:hover {
-                background: #e5f1fb;
-            }
-            .main-content {
-                display: flex;
-                gap: 32px;
-                padding: 32px;
-                max-width: 1200px;
-                margin: 0 auto;
-            }
-            .screenshots {
-                flex: 1.2;
-                display: flex;
-                flex-direction: column;
-                gap: 16px;
-            }
-            .screenshots img {
-                width: 100%;
-                border-radius: 8px;
-                box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-                background: #ddd;
-                object-fit: cover;
-                height: 220px;
-            }
-            .description {
-                flex: 2;
-                background: #fff;
-                border-radius: 8px;
-                padding: 24px;
-                box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-            }
-            .description h2 {
-                margin-top: 0;
-                font-size: 1.4rem;
-                color: #0078d4;
-            }
-            @media (max-width: 900px) {
-                .main-content {
-                    flex-direction: column;
-                    gap: 24px;
-                    padding: 16px;
-                }
-                .header {
-                    flex-direction: column;
-                    align-items: flex-start;
-                    gap: 16px;
-                    padding: 16px;
-                }
-                .install-btn {
-                    margin-left: 0;
-                    margin-top: 16px;
-                }
-            }
-        </style>
+        <style></style>
+        <link rel="stylesheet" href="/One-Staller/apps/content/styles.css">
         <link rel="stylesheet" href="/One-Staller/styles.css">
         <link rel="icon" type="image/x-icon" href="/One-Staller/assets/logo.png"></link>
         <script src="/HttpReq.js"></script>
