--- a/Bar.htm
+++ b/Bar.htm
@@ -4,9 +4,9 @@
     <button type="submit">Search (UNAVIABLE)</button>
 </form>
 <nav>
-    <a href="/One-Staller/">Home</a>
-    <a href="/One-Staller/apps/">Apps</a>
+    <a href="/OneStaller/">Home</a>
+    <a href="/OneStaller/apps/">Apps</a>
     <a href="#">Categories</a>
-    <a href="/One-Staller/Dev-Eara/">Devs eara</a>
-    <a href="https://github.com/MAT-services/One-Staller/blob/main/TOS.md">TOS</a>
+    <a href="/OneStaller/Dev-Eara/">Devs eara</a>
+    <a href="https://github.com/MAT-services/OneStaller/blob/main/TOS.md">TOS</a>
 </nav>
