--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -7,13 +7,13 @@
         <style>
 
         </style>
-        <link rel="stylesheet" href="/One-Staller/styles.css">
-        <link rel="icon" type="image/x-icon" href="/One-Staller/assets/logo.png"></link>
+        <link rel="stylesheet" href="/OneStaller/styles.css">
+        <link rel="icon" type="image/x-icon" href="/OneStaller/assets/logo.png"></link>
         <script src="/HttpReq.js"></script>
     </head>
     <body>
         <header id="Bar"></header>
-        <script>includeHTML("Bar", "/One-Staller/Bar.htm");</script>
+        <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
         <main>
             <section class="app-grid">
                 <div class="app-card">
@@ -25,12 +25,12 @@
                 </div>
             </section>
             <selection class="app-grid">
-                <div class="app-card" style="background-image: url(/One-Staller/assets/BCE1.jpg);">
+                <div class="app-card" style="background-image: url(/OneStaller/assets/BCE1.jpg);">
                     <button style="cursor: pointer;" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScmSyUldq-yiHO_uixs-4dvHGghZGpMJjwwLnBBI-si8ycohA/viewform')">PUBLISH!</button>
                 </div>
                 <div class="app-card">
                     <H2>Publish your application now!</H2>
-                    <p>Start publishing your application on OneStaller. That totally FREE, just... Please... See the One-Staller Terms Of Use.</p>
+                    <p>Start publishing your application on OneStaller. That totally FREE, just... Please... See the OneStaller Terms Of Use.</p>
                 </div>
             </selection>
             <section class="app-grid">
