--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>One-Staller - Apps - Exemple App</title>
+        <title>OneStaller - Apps - Exemple App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style></style>
-        <link rel="stylesheet" href="/One-Staller/apps/content/styles.css">
-        <link rel="stylesheet" href="/One-Staller/styles.css">
-        <link rel="icon" type="image/x-icon" href="/One-Staller/assets/logo.png"></link>
+        <link rel="stylesheet" href="/OneStaller/apps/content/styles.css">
+        <link rel="stylesheet" href="/OneStaller/styles.css">
+        <link rel="icon" type="image/x-icon" href="/OneStaller/assets/logo.png"></link>
         <script src="/HttpReq.js"></script>
     </head>
     <body>
         <header id="Bar"></header>
-        <script>includeHTML("Bar", "/One-Staller/Bar.htm");</script>
+        <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
         <div class="header-app">
             <div class="app-icon">🟦</div>
             <div class="app-info">
