--- a/apps/index.html
+++ b/apps/index.html
@@ -6,16 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
         </style>
-        <link rel="stylesheet" href="/One-Staller/styles.css">
-        <link rel="icon" type="image/x-icon" href="/One-Staller/assets/logo.png"></link>
+        <link rel="stylesheet" href="/OneStaller/styles.css">
+        <link rel="icon" type="image/x-icon" href="/OneStaller/assets/logo.png"></link>
         <script src="/HttpReq.js"></script>
     </head>
     <body>
         <header id="Bar"></header>
-        <script>includeHTML("Bar", "/One-Staller/Bar.htm");</script>
+        <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
         <main>
             <section class="app-grid" id="AppGrd"></section>
-            <script>includeHTML("AppGrd", "/One-Staller/apps/content.htm");</script>
+            <script>includeHTML("AppGrd", "/OneStaller/apps/content.htm");</script>
         </main>
     </body>
 </html>
