Adding Security informations.

--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -18,7 +18,8 @@
             <div class="app-info">
                 <div class="app-title">Exemple app</div>
                 <div class="app-publisher">by Admin.</div>
-                <div class="app-rating"><!--★★★★☆ (4.0)--></div>
+                <div class="app-rating">★★★★☆ (4.0)</div>
+                <div class="app-secure" style="color:red;">✅ Securised by something</div>
             </div>
             <button class="install-btn">Download</button>
         </div>
