--- a/apps/content/mat-tweakers/index.html
+++ b/apps/content/mat-tweakers/index.html
@@ -19,6 +19,7 @@
                 <div class="app-title">MAT Tweakers</div>
                 <div class="app-publisher">by Admin.</div>
                 <div class="app-rating"><!--★★★★☆ (4.0)--></div>
+                <div class="app-secure">✅ Securised by MAT</div>
             </div>
             <button class="install-btn">Download</button>
         </div>
