--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -21,7 +21,7 @@
                 <div class="app-secure" style="color:red;">✅ Securised by something</div>
             </div>
             <button class="install-btn">Download</button>
-            <div class="app-rating install-btn">★★★★☆ (4.0)</div>
+            <div class="app-rating">★★★★☆ (4.0)</div>
         </div>
         <div class="main-content">
             <div class="screenshots">
