--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -21,7 +21,7 @@
                 <div class="app-secure" style="color:red;">✅ Securised by something</div>
             </div>
             <button class="install-btn">Download</button><br>
-            <div class="app-version">Version 1.0.0</div>
+            <div class="app-version">Version 1.0.0</div><br>
             <div class="app-rating">★★★★☆ (4.0)</div>
         </div>
         <div class="main-content">
