--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -20,7 +20,9 @@
                 <div class="app-publisher">by Admin.</div>
                 <div class="app-secure" style="color:red;">✅ Securised by something</div>
             </div>
-            <button class="install-btn">Download</button><br>
+            <div>
+                <button class="install-btn">Download</button><br>
+            </div>
             <div class="app-version">Version 1.0.0</div><br>
             <div class="app-rating">★★★★☆ (4.0)</div>
         </div>
