--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="app-actions">
                 <button class="install-btn">Download</button><br>
-                <div class="app-version">Version 1.0.0</div><br>
+                <div class="app-version">Version 1.0.0</div>
                 <div class="app-rating">★★★★☆ (4.0)</div>
             </div>
         </div>
