--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -17,12 +17,15 @@
             <div class="app-icon">🟦</div>
             <div class="app-info">
                 <div class="app-title">Exemple app</div>
+                <table>
+                    <tr><td><div class="app-publisher">by Admin.</div></td><td><div class="app-version">Version 1.0.0</div></td></tr>
+                </table>
                 <div class="app-publisher">by Admin.</div>
                 <div class="app-secure" style="color:red;">✅ Securised by something</div>
             </div>
             <div class="app-actions">
                 <button class="install-btn">Download</button><br>
-                <div class="app-version">Version 1.0.0</div>
+                
                 <div class="app-rating">★★★★☆ (4.0)</div>
             </div>
         </div>
