--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -22,7 +22,7 @@
                         <td>
                             <div class="app-version">Version 1.0.0</div>
                         </td>
-                        <td> - </td>
+                        <td class="app-version"><p style="color:transparent">--</p>-<p style="color:transparent">--</p></td>
                         <td>
                             <div class="app-publisher">by Admin.</div>
                         </td>
