--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -22,7 +22,13 @@
                         <td>
                             <div class="app-version">Version 1.0.0</div>
                         </td>
-                        <td class="app-version"><a style="color:transparent">--</a>-<a style="color:transparent">--</a></td>
+                        <td>
+                            <div class="app-version">
+                                <a style="color:transparent">--</a>
+                                -
+                                <a style="color:transparent">--</a>
+                            </div>
+                        </td>
                         <td>
                             <div class="app-publisher">by Admin.</div>
                         </td>
