--- a/Dev-Eara/index.html
+++ b/Dev-Eara/index.html
@@ -26,7 +26,7 @@
             </section>
             <selection class="app-grid">
                 <div class="app-card" style="background-image: url(/OneStaller/assets/BCE1.jpg);">
-                    <button style="cursor: pointer;" onclick="window.open('./publish/')">PUBLISH!</button>
+                    <button style="cursor: pointer;" onclick="window.location.href = './publish/' ">PUBLISH!</button>
                 </div>
                 <div class="app-card">
                     <H2>Publish your application now!</H2>
