--- a/Dev-Eara/publish/index.html
+++ b/Dev-Eara/publish/index.html
@@ -20,9 +20,9 @@
             <h2>Options</h2>
             <h2>Steps</h2>
             <H3>Creation of an account</H3>
-            Have an MPC account is nessesary to publish an application on MPC. If you haven't one yet, <a href="">click here to create one</a>.
+            Have an MPC account is nessesary to publish an application on MPC. If you haven't one yet, <a href="https://forms.gle/rNXiD7KHfxLNk1Jk8">click here to create one</a>.
             <H3>Setup and importztion of your application</H3>
-            To import your application, go to the <a href="https://forms.gle/rNXiD7KHfxLNk1Jk8">registering formular</a>.
+            To import your application, go to the <a href="">registering formular</a>.
         </main>
     </body>
 </html>
