Adding registering formular.

--- a/Dev-Eara/publish/index.html
+++ b/Dev-Eara/publish/index.html
@@ -22,7 +22,7 @@
             <H3>Creation of an account</H3>
             Have an MPC account is nessesary to publish an application on MPC. If you haven't one yet, <a href="https://forms.gle/rNXiD7KHfxLNk1Jk8">click here to create one</a>.
             <H3>Setup and importztion of your application</H3>
-            To import your application, go to the <a href="">registering formular</a>.
+            To import your application, go to the <a href="https://forms.gle/sXqY88NxPFrV3K1X8">registering formular</a>.
         </main>
     </body>
 </html>
