--- a/Dev-Eara/publish/account.html
+++ b/Dev-Eara/publish/account.html
@@ -15,14 +15,7 @@
         <header id="Bar"></header>
         <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
         <main>
-            <H1>Publish an application on OneStaller</H1>
-            If that the first time that you publish an application on OneStaller, go to <g>Steps</g>.
-            <h2>Options</h2>
-            <h2>Steps</h2>
-            <H3>Creation of an account</H3>
-            Have an MPC account is nessesary to publish an application on MPC. If you haven't one yet, <a href="account.html">click here to create one</a>.
-            <H3>Setup and importztion of your application</H3>
-            To import your application, go to the <a href="application.html">registering formular</a>.
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdSmr4lwlFMbxIk2bJ5ujaZrz3iFZmT2dqeE59YQXXmAZGEbg/viewform?embedded=true" style="width: 100%; height: 100vh; border: none;"></iframe>
         </main>
     </body>
 </html>
