--- a/Dev-Eara/publish/index.html
+++ b/Dev-Eara/publish/index.html
@@ -14,10 +14,12 @@
     <body>
         <header id="Bar"></header>
         <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
-        <main>
+        <main style="padding: 5%;">
             <H1>Publish an application on OneStaller</H1>
             If that the first time that you publish an application on OneStaller, go to <g>Steps</g>.
             <h2>Options</h2>
+            <button>Create/Edit your account</button>
+            <button>Publish/Edit an application</button>
             <h2>Steps</h2>
             <H3>Creation of an account</H3>
             Have an MPC account is nessesary to publish an application on MPC. If you haven't one yet, <a href="account.html">click here to create one</a>.
