--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -5,7 +5,7 @@
         <title>OneStaller - Apps - Exemple App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style></style>
-        <link rel="stylesheet" href="/OneStaller/apps/content/styles.css">
+        <link rel="stylesheet" href="/OneStaller/apps/styles.css">
         <link rel="stylesheet" href="/OneStaller/styles.css">
         <link rel="icon" type="image/x-icon" href="/OneStaller/assets/logo.png"></link>
         <script src="/HttpReq.js"></script>
